docs/dolfin/2016.1.0/python/source/programmers-reference/cpp/fem/index.rst
.. Index file for the dolfin.cpp.fem module.

.. _programmers_reference_cpp_fem_index:

dolfin.cpp.fem module
*********************

Classes:

.. toctree::
    :maxdepth: 1

    AdaptiveLinearVariationalSolver
    AdaptiveNonlinearVariationalSolver
    Assembler
    AssemblerBase
    BasisFunction
    DirichletBC
    DiscreteOperators
    DofMap
    Equation
    ErrorControl
    Extrapolation
    FiniteElement
    Form
    GenericAdaptiveVariationalSolver
    GenericDofMap
    HierarchicalDirichletBC
    HierarchicalErrorControl
    HierarchicalForm
    HierarchicalFunction
    HierarchicalFunctionSpace
    HierarchicalLinearVariationalProblem
    HierarchicalMesh
    HierarchicalNonlinearVariationalProblem
    LinearVariationalProblem
    LinearVariationalSolver
    LocalAssembler
    LocalSolver
    MultiMeshAssembler
    MultiMeshDirichletBC
    MultiMeshDofMap
    MultiMeshForm
    MultiStageScheme
    NonlinearVariationalProblem
    NonlinearVariationalSolver
    OpenMpAssembler
    PointIntegralSolver
    PointSource
    RKSolver
    SparsityPatternBuilder
    SystemAssembler
    TimeSeries
    ufc_cell
    ufc_dofmap
    ufc_finite_element
    ufc_form
    ufc_function

Functions:

.. toctree::
    :maxdepth: 1

    DirichletBC_default_parameters
    DiscreteOperators_build_gradient
    ErrorControl_default_parameters
    Extrapolation_extrapolate
    GenericAdaptiveVariationalSolver_default_parameters
    LinearVariationalSolver_default_parameters
    LocalAssembler_assemble
    LocalAssembler_assemble_cell
    LocalAssembler_assemble_exterior_facet
    LocalAssembler_assemble_interior_facet
    NonlinearVariationalSolver_default_parameters
    PointIntegralSolver_default_parameters
    SparsityPatternBuilder_build
    SparsityPatternBuilder_build_multimesh_sparsity_pattern
    TimeSeries_default_parameters
    adapt
    adapt_markers
    assemble
    assemble_local
    assemble_multimesh
    assemble_system
    create_mesh
    dof_to_vertex_map
    dorfler_mark
    fem_solve
    get_coordinates
    mark
    set_coordinates
    vertex_to_dof_map

Module docstring:

.. automodule:: dolfin.cpp.fem
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: